fix help and flash notice

--- a/lib/views/help/about.html.erb
+++ b/lib/views/help/about.html.erb
@@ -6,17 +6,23 @@
 <h1 id="introduction">O projektu <i><%= site_name %></i></i> <a href="#introduction">#</a> </h1>
 
 <p>
-Portal <i><%= site_name %></i> je kao središnje mjesto informiranja građana o potrošačkoj problematici, mjesto na kojom će korisnici portala, podnositelji pritužbi u suradnji s raznim stručnjacima, udrugama, institucijama ili tvrtkama nalaziti konstruktivna rješenja svojih problema. <i><%= site_name %></i> omogućuje slanje prigovora određenom trgovcu ili drugoj pravnoj osobi.
+Portal <i><%= site_name %></i> je središnje mjesto informiranja građana o potrošačkoj problematici, mjesto na kojom će korisnici portala, podnositelji pritužbi u suradnji s raznim stručnjacima, udrugama, institucijama ili tvrtkama nalaziti konstruktivna rješenja svojih problema. <i><%= site_name %></i> omogućuje slanje prigovora trgovcu ili drugoj pravnoj osobi.
 </p>
 <p>
-Jedno od temeljnih prava potrošača jest i pravo na informiranje na područja zaštite osnovnih prava potrošača - zaštitu ekonomskih interesa potrošača, zaštitu od opasnosti za život, zdravlje i imovinu, pravnu zaštitu potrošača, informiranje i edukaciju potrošača, udruživanje potrošača u svrhu zaštite njihovih interesa, predstavljanje potrošača i sudjelovanje predstavnika potrošača u radu tijela koja rješavaju pitanja od njihova interesa.
+Jedno od temeljnih prava potrošača jest i pravo na informiranje u području zaštite osnovnih prava potrošača - zaštitu ekonomskih interesa potrošača, zaštitu od opasnosti za život, zdravlje i imovinu, pravnu zaštitu potrošača, informiranje i edukaciju potrošača, udruživanje potrošača u svrhu zaštite njihovih interesa, predstavljanje potrošača i sudjelovanje predstavnika potrošača u radu tijela koja rješavaju pitanja od njihova interesa.
 </p>
 <p>
-Nadamo se da ćemo <i><%= site_name %></i> osnažiti potrošačko pravo na informiranje po svim područjima zaštite osnovnih  prava potrošača te ujedno ukazivati na probleme koji nas okružuju i doprinijeti njihovom rješavanju.
+Nadamo se da će <i><%= site_name %></i> osnažiti potrošačko pravo na informiranje po svim područjima zaštite osnovnih prava potrošača te ujedno ukazivati na probleme koji nas okružuju i doprinijeti njihovom rješavanju.
 </p>
 <p>
 S obzirom da ostvarenje prava na reklamaciju doprinosi većoj odgovornosti trgovaca i pružatelja usluga i kvaliteti robe i usluga koju pružaju, ono je važna pretpostavka za sva demokratska društva te sredstvo koje građanima pruža mogućnost da dođu do informacija koje su im potrebne za ostvarivanje njihovih prava. Nadamo se da ćemo, kako kvalitetnim sadržajem na portalu, tako i boljim povezivanjem potrošača i građana s trgovcima i javnim tijelima, značajno doprinijeti poboljšanju kvalitete proizvoda i usluga u Hrvatskoj.
 </p>
+
+<dl>
+<dt id="history"><i><%= site_name %></i> kroz vrijeme <a href="#history">#</a> </dt>
+<dd>
+<i><%= site_name %></i> pokrenute su 2008. godine od strane Ivana Balabanića, Marina Balabanića, Danijele Vagan i Branka Gredelja. Ideja je bila da građani putem portala mogu javno izraziti svoje nezadovoljstvo s proizvodima i uslugama, a da poduzeća i javne službe putem komentara mogu reći svoju stranu spornog događaja a ukoliko je i došlo do pogreške s njihove strane da mogu javno popraviti svoj odnos prema kupcu. Portal je zamišljen kao mjesto koje će doprinijeti kvaliteti proizvoda i usluga na hrvatskom tržištu. U periodu od 2008. do 2015. na portal je ima više milijuna posjetitelja, napisano je više tisuća reklamacija posjetitelja, te gotovo 100.000 komentara. 2015. godine <i><%= site_name %></i> su privremeno ugašene kako bi se razvila nova verzija portala. Iste godine u rad portala se uključuje i Institut za medije (IME) te Hrvatska udruga za otvorene sustave i internet (HrOpen). Od 2017. <i><%= site_name %></i> djeluje u okviru Hrvatske udruge za otvorene sustave i internet koja je preuzela daljnji razvoj portala.
+</dd>
 
 <dl>
 <dt id="purpose">Čemu služe <i><%= site_name %></i>? <a href="#purpose">#</a> </dt>
@@ -81,7 +87,7 @@ Portal uređuju, tehnički održavaju i administriraju volonteri i članovi <a h
 <dt id="rh">Zaštita potrošača u Republici Hrvatskoj <a href="#rh">#</a> </dt>
 <dd>
 <p>
-Na jedinstvenom tržištu Europske unije vrijede <strong>ista pravila zaštite potrošača za sve njene državljane</strong>. Zaštita potrošača u RH nije uređena na jedinstven i sustavan način. Temeljni i opći propis o zaštiti  potrošača  je  Zakon o zaštiti potrošača (ZZP),  koji  kao  rezultat  usklađivanja  s <i>acquis  communautaire</i> preuzima čitav niz EU direktiva u hrvatsko pravo. Iako se većina spomenutih EU direktiva odnosi na pojedine  ugovore  koje  sklapaju  potrošač  i  trgovac  ili  neke  njihove  važne  aspekte,  one nerijetko pored   privatnopravnih sadrže  i  uređuju  brojne  javnopravne  elemente,  što   se odražava i na ZZP. Ministarstvo gospodarstva, poduzetništva i obrta je nositelj politike zaštite potrošača. U njeno provođenje uključena su i druga tijela javne vlasti, udruge za zaštitu potrošača, poslovna zajednica, strukovna udruženja, trgovci, akademska zajednica i sudbena vlast.
+Na jedinstvenom tržištu Europske unije vrijede <strong>ista pravila zaštite potrošača za sve njene državljane</strong>. Zaštita potrošača u RH nije uređena na jedinstven i sustavan način. Temeljni i opći propis o zaštiti potrošača je Zakon o zaštiti potrošača (ZZP), koji kao rezultat usklađivanja s <i>acquis communautaire</i> preuzima čitav niz EU direktiva u hrvatsko pravo. Iako se većina spomenutih EU direktiva odnosi na pojedine ugovore koje sklapaju potrošač i trgovac ili neke njihove važne aspekte, one nerijetko pored privatnopravnih sadrže i uređuju brojne javnopravne elemente, što se odražava i na ZZP. Ministarstvo gospodarstva, poduzetništva i obrta je nositelj politike zaštite potrošača. U njeno provođenje uključena su i druga tijela javne vlasti, udruge za zaštitu potrošača, poslovna zajednica, strukovna udruženja, trgovci, akademska zajednica i sudbena vlast.
 </p>
 <p>
 Politiku zaštite potrošača čini niz mjera kojima se pospješuju i štite interesi potrošača koji se na tržištu pojavljuju radi pribavljanja roba i usluga. Te mjere uključuju:
@@ -165,8 +171,8 @@ Deset najvažnijih prava potrošača:
 <li>ako je stvar nepravilno montirana pod uvjetom da je usluga montaže uključena u ispunjenje ugovora o prodaji,</li>
 <li>ako je nepravilna montaža posljedica nedostataka u uputama za montažu.</li>
 </ul></p>
-<p>U slučaju kršenja njegovih prava, pa tako i u ovom slučaju, potrošač može podnijeti <a href="/select_authority">pisani prigovor trgovcu</a>. Naime, obveza je trgovca da omogući potrošaču podnošenje pisanog prigovora u svojim poslovnim prostorijama te putem pošte, telefaksa ili elektroničke pošte[3]. Na podneseni prigovor on mora odgovoriti u pisanom obliku u roku od 15 dana. Ako trgovac pruža javnu uslugu (npr. prijevoz putnika u javnom prometu, distribucija električne energije, distribucija komunikacijskih usluga, itd.), dužan je osnovati i povjerenstvo za reklamacije potrošača, u kojem trebaju biti zastupljeni i predstavnici udruga za zaštitu potrošača kojem potrošač može uputiti i daljnji prigovor u slučaju nezadovoljstva njegovim odgovorom na pisani prigovor. Povjerenstvo mora pisano odgovoriti potrošačima na zaprimljene reklamacije u roku od 30 dana od dana zaprimanja.</p>
-<p>Kod postojanja materijalnih nedostataka, potrošač kao kupac nije obvezan pregledati stvar, ali je obvezan <stong>obavijestiti prodavatelja</stong> na opisani način o postojanju nedostataka (vidljivih i skrivenih) u roku od dva mjeseca od dana kad je otkrio nedostatak, a najkasnije u roku od dvije godine od prijelaza rizika na potrošača, tj. predaje stvari (makar trgovac u svojim prostorijama oglašava kraći rok). Kao dokaz svoje kupnje, kupac treba priložiti račun. Pretpostavlja se da je nedostatak postojao u vrijeme prijelaza rizika ako se pojavio u roku od šest mjeseci od prijelaza rizika, osim ako prodavatelj ne dokaže suprotno ili suprotno ne proizlazi iz naravi stvari ili naravi nedostatka (primjerice ako trgovac odbije prigovor navodeći da je sam kupac prouzročio nedostatak, bitan je trenutak pojave nedostatka. Ako se pojavio u roku od šest mjeseci od kupnje, teret dokazivanja da je kupac prouzročio nedostatak je na trgovcu, a ako se pojavio nakon tog roka, kupac je dužan dokazati da nije prouzročio nedostatak).</p>
+<p>U slučaju kršenja njegovih prava, pa tako i u ovom slučaju, potrošač može podnijeti <a href="/select_authority">pisani prigovor trgovcu</a>. Naime, obveza je trgovca da omogući potrošaču podnošenje pisanog prigovora u svojim poslovnim prostorijama te putem pošte, telefaksa ili elektroničke pošte. Na podneseni prigovor on mora odgovoriti u pisanom obliku u roku od 15 dana. Ako trgovac pruža javnu uslugu (npr. prijevoz putnika u javnom prometu, distribucija električne energije, distribucija komunikacijskih usluga, itd.), dužan je osnovati i povjerenstvo za reklamacije potrošača, u kojem trebaju biti zastupljeni i predstavnici udruga za zaštitu potrošača kojem potrošač može uputiti i daljnji prigovor u slučaju nezadovoljstva njegovim odgovorom na pisani prigovor. Povjerenstvo mora pisano odgovoriti potrošačima na zaprimljene reklamacije u roku od 30 dana od dana zaprimanja.</p>
+<p>Kod postojanja materijalnih nedostataka, potrošač kao kupac nije obvezan pregledati stvar, ali je obvezan <stong>obavijestiti prodavatelja</stong> na opisani način o postojanju nedostataka (vidljivih i skrivenih) u roku od dva mjeseca od dana kad je otkrio nedostatak, a najkasnije u roku od dvije godine od prijelaza rizika na potrošača, tj. predaje stvari (makar trgovac u svojim prostorijama oglašava kraći rok). Kao dokaz svoje kupnje, kupac treba priložiti račun. Pretpostavlja se da je nedostatak postojao u vrijeme prijelaza rizika ako se pojavio u roku od šest mjeseci od prijelaza rizika, osim ako prodavatelj ne dokaže suprotno ili suprotno ne proizlazi iz naravi stvari ili naravi nedostatka. Primjerice ako trgovac odbije prigovor navodeći da je sam kupac prouzročio nedostatak, bitan je trenutak pojave nedostatka. Ako se pojavio u roku od šest mjeseci od kupnje, teret dokazivanja da je kupac prouzročio nedostatak je na trgovcu, a ako se pojavio nakon tog roka, kupac je dužan dokazati da nije prouzročio nedostatak.</p>
 <p>Ako je pravodobno obavijestio prodavatelja, kupac <stong>može po svom izboru</stong>:
 <ul>
 <li>zahtijevati od prodavatelja da nedostatak ukloni</li>
@@ -177,7 +183,7 @@ Deset najvažnijih prava potrošača:
 <p>Bez obzira što je izabrao, kupac ima pravo i na popravljanje štete (naknada štete koja je uzrokovana nedostacima proizvoda). U slučaju da se radi o neznatnom nedostatku, kupac nema pravo na raskid ugovora, ali ima pravo izabrati između ostalih zakonskih mogućnosti. Ako kupac zahtijeva ispunjenje ugovora, prodavatelj je dužan ispuniti svoju obvezu u razumnom roku. Rok varira i ovisi o konkretnoj stvari i samim nedostacima. Troškove otklanjanja nedostatka i predaje druge stvari bez nedostatka snosi prodavatelj. Popravak ne smije stvoriti dodatne troškove kupcu. Ukoliko trgovac u razumnom roku ne popravi stvar odnosno ne preda novu, bez nedostataka, kupac zadržava pravo zahtijevati sniženje cijene ili raskid ugovora (povrat novca). Ako je kupac već ostvario sniženje cijene, a s vremenom se otkrije novi nedostatak, može zahtijevati novo sniženje ili raskinuti ugovor.</p>
 <p> Kupac ima sva navedena prava bez obzira da li je stvar kupio na sniženju, rasprodaji ili akciji. No, ako se proizvod prodaje po sniženoj cijeni od redovne zato jer ima grešku, a fizički je odvojen od drugih proizvoda te je jasno, vidljivo i čitljivo označeno da se radi o proizvodu sa greškom, kupac nema pravo na reklamaciju zbog materijalnog nedostatka jer se smatra da je s njim bio upoznat.</p>
 <p> Ukoliko kupljeni proizvod nema materijalnih nedostataka, ali je kupac nezadovoljan ili se jednostavno predomislio, može se obratiti trgovcu sa zamolbom da se proizvod zamijeni za drugi ili se vrati novac, no trgovac nije dužan istome i udovoljiti jer ne postoji takva zakonska obveza. Unatoč tome, trgovac može izaći u susret kupcu djelujući u skladu sa dobrom poslovnom praksom. Iznimka su proizvodi kupljeni izvan poslovnih prostorija trgovca te ugovori sklopljeni na daljinu gdje se potrošači dodatno štite zbog okolnosti u kojima su ti ugovori sklopljeni. Zakonom je određeno da potrošač ima pravo jednostrano raskinuti takav ugovor, ne navodeći razloge za to, u roku od 14 dana od sklapanja ugovora.</p>
-</dd>       
+</dd>
 
 <dt id="sigurnost">Pravo na visoku razinu zaštite zdravlja i sigurnosti <a href="#sigurnost">#</a> </dt>
 <dd>
@@ -187,7 +193,7 @@ samo proizvode koji zadovoljavaju visoke sigurnosne standarde utvrđene propisim
 tehničkog zakonodavstva i normama. Osim općih pravila o sigurnosti proizvoda, koja
 se primjenjuju na sve proizvode, posebni propisi predviđaju sigurnosne standarde za
 određene grupe proizvoda, kao što su igračke, kozmetika, električni uređaji i sl. Premda
-nijedan sustav sigurnosti ne može jamčiti potpunu sigurnost proizvoda odnosno odsutnost
+niti jedan sustav sigurnosti ne može jamčiti potpunu sigurnost proizvoda odnosno odsutnost
 rizika za potrošače, europski sustav sigurnosti proizvoda predviđa mehanizme
 zaštite potrošača u slučaju nesigurnih proizvoda na tržištu. Oni će se u najkraćem
 mogućem roku povući s tržišta. Ako bi određeni potrošači bili oštećeni neispravnošću
@@ -342,7 +348,7 @@ vrijeđa prava potrošača.</p>
 <p>Za potrošače su također predviđeni alternativni oblici pravne zaštite, poput mogućnosti
 pokretanja postupka protiv pojedinog trgovca pred sudovima časti HGK-a, HUP-a te HOK-a
 te postupka pred centrima za mirenje tih tijela.</p>
-<p>Nazor nad provedbom Zakona o zaštiti potrošača provodi državni inspektorat i ostali
+<p>Nadzor nad provedbom Zakona o zaštiti potrošača provodi državni inspektorat i ostali
 nadležni inspektori. U provedbi inspekcijskog nadzora, nadležni inspektor može:
 <ul>
  <li>trgovcu privremeno zabraniti prodaju proizvoda i pružanje usluga</li>
