--- a/lib/views/help/officers.html.erb
+++ b/lib/views/help/officers.html.erb
@@ -36,7 +36,7 @@
 <p>Pogledajte to ovako - kad bi mnoštvo ljudi poslalo prigovore s različitih Hotmail e-mail adresa, ne biste mislili da je Microsoft taj koji šalje te prigovore. Ista stvar je i kod prigovora poslanih putem <i><%= site_name %></i>. Štoviše, budući da su svi prigovori javnog karaktera, puno je lakše uočiti korisnika koji učestalo šalje nevažne i neželjene poruke.</p>
 </dd>
 
-<dt id="spam_problems">Zahtjev je vidljiv na <i><%= site_name %></i> no nismo ga primili putem e-maila! <a href="#spam_problems">#</a> </dt>
+<dt id="spam_problems">Prigovor je vidljiv na <i><%= site_name %></i> no nismo ga primili putem e-maila! <a href="#spam_problems">#</a> </dt>
 
 <dd><p>Ako zahtjev postoji na stranici, to znači da smo ga pokušali poslati putem e-maila. Prilikom svakog neuspjelog slanja, poruka će se automatski pojaviti na stranici. Ukoliko dođe do ovakve situacije molimo da nas <a href="/help/contact">kontaktirate</a> te da nam dostavite valjanu e-mail adresu.</p>
 
@@ -64,7 +64,7 @@
       </dd>
 </dl>
 
-<p><strong>Ukoloko još niste</strong>, pročitate <a href="/help/about">uvod o ovom projektu</a> --&gt;
+<p><strong>Ukoliko još niste</strong>, pročitate <a href="/help/about">uvod o ovom projektu</a> --&gt;
 <br><strong>Pogledajte</strong> i <a href="/help/credits">zahvale</a> ili <a href="/help/api">API za programere</a> --&gt;</p>
 
 <div id="hash_link_padding"></div>
