--- a/lib/views/help/privacy.html.erb
+++ b/lib/views/help/privacy.html.erb
@@ -41,7 +41,7 @@ Objavljujemo vaš prigovor na internetu tako da ga svatko može pročitati i pos
 <dt id="full_address">Trebam li dati svoju poštansku adresu? <a href="#full_address">#</a> </dt>
 
 <dd>
-<p>Ako vas pravna osoba traži punu, fizičku adresu, odgovorite im da želite komunikaciju elektroničkom poštom. Pravna osoba će odgovoriti na vaš prigovor kada daju pristup traženoj informaciji elektroničkim putem bez potrebe da im dostavite kućnu adresu.
+<p>Ako vas pravna osoba traži punu, fizičku adresu, odgovorite im da želite komunikaciju elektroničkom poštom. Pravna osoba će odgovoriti na vaš prigovor elektroničkim putem bez potrebe da im dostavite kućnu adresu.
 </p>
 </dd>
 
