--- a/lib/views/help/requesting.html.erb
+++ b/lib/views/help/requesting.html.erb
@@ -89,7 +89,7 @@ Nakon slanja pisanog prigovora pravna osoba će dobiti na službeni email Vaš p
 U slučaju da ste nezadovoljni s odgovorom trgovca ili u slučaju da niste dobili odgovor u propisanom roku, putem portala <i><%= site_name %></i> možete uputiti drugostupanjsku žalbu, ali ovaj put naslovljeno na Povjerenstvo za reklamacije.
 </p>
 <p>
-Ako je odgovor Povjerenstva za reklamacije nepovoljan za vas ili ga ne zaprimite u propisanom roku od 30 dana od Povjerenstva za reklamacije, možete uputi novi prigovor, ali ovaj put trećestupanjskom tijelu.
+Ako je odgovor Povjerenstva za reklamacije nepovoljan za vas ili ga ne zaprimite u propisanom roku od 30 dana od Povjerenstva za reklamacije, možete uputiti novi prigovor, ali ovaj put trećestupanjskom tijelu.
 </p>
 </dd>
 
