--- a/lib/views/general/_responsive_header.html.erb
+++ b/lib/views/general/_responsive_header.html.erb
@@ -70,10 +70,10 @@
   <div class="wrapper">
     <div class="homepage-flash">
       <% if flash[:notice] %>
-        <div id="notice"><%= render_flash(flash[:notice]) %></div>
+        <div id="notice"><%= flash[:notice] %></div>
       <% end %>
       <% if flash[:error] %>
-        <div id="error"><%= render_flash(flash[:error]) %></div>
+        <div id="error"><%= flash[:error] %></div>
       <% end %>
     </div>
   </div>
