small fixes in text and new favicon

--- a/lib/views/general/_responsive_credits.html.erb
+++ b/lib/views/general/_responsive_credits.html.erb
@@ -1,2 +1,2 @@
-<p><%= _('Projekt udruge No-Me-Kultura i IME, a održava Code for Croatia i volonteri a pokreće <a href="http://www.alaveteli.org/">Alaveteli</a>') %>
+<p><%= _('Reklamacije.net je projekt HrOpen ekspertne skupine Code for Croatia, održavaju volonteri a pokreće <a href="http://www.alaveteli.org/">Alaveteli</a>') %>
 </p>
