--- a/lib/views/help/credits.html.erb
+++ b/lib/views/help/credits.html.erb
@@ -12,10 +12,10 @@
 <dd>Eh, skoro svi (a možda i ti)! 
 <ul>
 <li>
-    <a href="http://twitter.com/darvvon">Mirolav Schlossberg</a>, voditelj <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a>, za iniciranje, koordiniranje i u konačnici implementaciju ove internetske aplikacije za ponošenje elektronskih prigovora.
+    <a href="https://twitter.com/darvvon">Mirolav Schlossberg</a>, voditelj <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a>, za iniciranje, koordiniranje i u konačnici implementaciju ove internetske aplikacije za ponošenje elektronskih prigovora.
 </li>
 <li>
-    Marin i Ivan Balabanić, osnivači udruge No-Me-Kultura za odličnu ideju i osnivanje portala Reklamacije.net.
+    Marin Balabanić, <a href="https://twitter.com/IvanBalabanic">Ivan Balabanić</a> i Danijela Vagan Balabanić za odličnu ideju i osnivanje portala Reklamacije.net.
 </li>
 <li>
     Zahvaljujemo se i svim volonterima koji su sudjelovali na Rekalamacije.net projektu.  
