add additional appeal information

--- a/lib/views/help/unhappy.html.erb
+++ b/lib/views/help/unhappy.html.erb
@@ -18,16 +18,23 @@
 
 <p>...možete</p>
 
-<ol>
-<li>Poslati Vaš prigovor na <strong>drugostupanjsku proceduru</strong> kod iste pravne osobe te naslovite na ruke Povjerenstva za reklamacije.</li>
-<li>Pokrenuti postupak kod <strong>Ministarstva gospodarstva</strong>, putem <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralnog informacijskog sustava za zaštitu potrošača</a>.</li>
-<li>Ako to ne pomogne, savjetujemo da posjetite stranice sa savjetima na središnjem portalu <strong>Reklamacije.net</strong> te da se konzultirate s našim savjetnicima za prava potrošača.</li>
-</ol>
+<ul>
+<li>poslati Vaš prigovor na <strong>drugostupanjsku proceduru</strong> kod <strong>trgovca koji pruža javnu uslugu</strong> te naslovite na ruke Povjerenstva za reklamacije</li>
+<li>pokrenuti <strong>drugostupanjsku proceduru</strong> za on-line rješavanju potrošačkih sporova putem <a href=" http://ec.europa.eu/odr">Platforma za ORS</a></li>
+<li>ako to ne pomogne, kontaktirate jedno <strong>savjetovalište</strong> sa službenog popisa <a href="http://0.codeforcroatia.org/reklamacijeudruge">Savjetovališta potrošača</a> koje organiziraju udruge za zaštitu potrošača te koje djeluju neovisno o interesima trgovaca</li>
+<li>i posljednje, ako ništa od navedenog nije pomoglo u vašem predmetu, pokrenite postupak kod <strong>Ministarstva gospodarstva</strong> putem <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralnog informacijskog sustava za zaštitu potrošača</a> koje može rezultirati inspekcijskim nadzorom trgovca</li>
+</ul>
 
-<h1 id="internal_review">1. Drugostupanjska žalba <a class="hover_a" href="#internal_review">#</a> </h1>
+<h1 id="internal_review">Drugostupanjska žalba <a class="hover_a" href="#internal_review">#</a> </h1>
+
+<h2 id="complaining">Postupak kod trgovca koji pruža javnu uslugu <a class="hover_a" href="#appeal">#</a> </h2>
 
 <p>
-U slučaju da ste nezadovoljni s odgovorom pravne osobe ili u slučaju da niste dobili odgovor u propisanom roku, možete uputiti novi prigovor toj pravnoj osobi, ali ovaj put naslovljeno na Povjerenstvo za reklamacije.
+Trgovac koji pruža javnu uslugu dužan je osnovati povjerenstvo za reklamacije potrošača u kojem trebaju biti zastupljeni predstavnici udruga za zaštitu potrošača. Povjerenstvo mora pisano odgovoriti potrošačima na zaprimljene reklamacije u roku od 30 dana od dana zaprimanja reklamacije.
+</p>
+
+<p>
+U slučaju da ste nezadovoljni s odgovorom pravne osobe koji pruža javnu uslugu ili u slučaju da niste dobili odgovor u propisanom roku na Vaš prigovor, možete uputiti prigovor Povjerenstvo za reklamacije kod trgovca koji pruža javnu uslugu.
 </p>
 
 <p>
@@ -47,9 +54,9 @@ U tom slučaju treba poduzeti sljedeće:
 <li>U roku od 30 dana Povjerenstvo treba razmotriti prigovor, te uputiti odgovor potrošaču.</li>
 </ol>
 
-<h1 id="complaining">2. Nastavljanje postupka kod nadležnog tijela <a class="hover_a" href="#complaining">#</a> </h1>
+<h2 id="complaining">Nastavljanje postupka kod drugog nadležnog tijela <a class="hover_a" href="#complaining">#</a> </h2>
 
-<p>Ako ste još uvijek nezadovoljni i nakon što je pravna osoba dostavila odgovor možete se žaliti nadležnom tijelu (npr. Ministarstvo Gospodarstva, HAKOM itd). Čak i kada pravna osoba ne odgovori na vašu žaljbu koju ste naslovili na Povjerenstvo, možete se žaliti nadležnom tijelu. Kako bi to učinili, 
+<p>Ako ste još uvijek nezadovoljni i nakon što je pravna osoba dostavila odgovor možete se žaliti nadležnom tijelu (npr. Ministarstvo Gospodarstva, HAKOM itd). Čak i kada pravna osoba ne odgovori na vašu žalbu koju ste naslovili na Povjerenstvo, možete nastaviti s žalbom nadležnom tijelu. Kako bi to učinili, 
 <a href="https://www.gov.hr/moja-uprava/pravna-drzava-i-sigurnost/prava-potrosaca/prije-i-nakon-kupnje/reklamacija-proizvoda-i-usluga-s-nedostatkom/183">prvo pročitajte upute za traženje inspekcijskog nadzora</a> na središnjem državnom portalu.
 </p>
 
@@ -71,9 +78,9 @@ ili ispišite cijelu stranicu s prigovorom i sve priloge.
 
 <p><i><%= site_name %></i> nema posebnih sredstava za rukovanje s prigovorima u ovoj fazi — prigovori se nalaze u sustavu nadležnog tijela. Međutim, možete ostavljati komentare ispod Vašeg prigovora na <i><%= site_name %></i> o statusu rješavanja zahtjeva za inspekcijskim nadzorom kako bi informirali ostale o napretku procesa.</p>
 
-<h1 id="other_means">3. Savjetovanje putem portala <i><%= site_name %></i> <a class="hover_a" href="#other_means">#</a> </h1>
+<h1 id="other_means">Savjetovanje potrošača <a class="hover_a" href="#other_means">#</a> </h1>
 
 <p>Potragu za rješenjem Vašeg problema možete nastaviti i na druge načine.</p>
 
-<p>Ako ste još uvijek nezadovoljni odgovorom ili uopće niste dobili odogovor, portal Reklamacije.net će se potruditi ponuditi Vam besplatne savjete za Vaš slučaj. Na <i><%= site_name %></i> potražite rubriku <strong>Pomoć</strong> i kontaktirajete naše osoblje. Moguće je da zbog ograničenih resursa savjetnici neće biti na raspolaganju ali svakako savjetujemo ovaj korak prije daljnih akcija koje planirate poduzeti. 
+<p>Ako ste još uvijek nezadovoljni odgovorom ili uopće niste dobili odogovor, kontaktirate jedno <strong>savjetovalište</strong> sa službenog popisa <a href="http://0.codeforcroatia.org/reklamacijeudruge">Savjetovališta potrošača</a> koje organiziraju udruge za zaštitu potrošača te koje djeluju neovisno o interesima trgovaca a koje podupire Ministarstvo gospodarstva, poduzetništva i obrta te tijela jedinica lokalne i područne (regionalne) samouprave koja su dužna sustavno promicati zaštitu potrošača na svom području.
 </p>
