add online complaint option

--- a/lib/views/help/unhappy.html.erb
+++ b/lib/views/help/unhappy.html.erb
@@ -78,6 +78,10 @@ ili ispišite cijelu stranicu s prigovorom i sve priloge.
 
 <p><i><%= site_name %></i> nema posebnih sredstava za rukovanje s prigovorima u ovoj fazi — prigovori se nalaze u sustavu nadležnog tijela. Međutim, možete ostavljati komentare ispod Vašeg prigovora na <i><%= site_name %></i> o statusu rješavanja zahtjeva za inspekcijskim nadzorom kako bi informirali ostale o napretku procesa.</p>
 
+<h2 id="complaining">On-line rješavanje potrošačkih sporova <a class="hover_a" href="#online">#</a> </h2>
+
+<p>Odredbom Europske komisije br. 524/2013 o on-line rješavanju potrošačkih sporova koja se primjenjuje od 09.01.2016 godine, u pogon je stavljena <a href="http://ec.europa.eu/odr">Platforma za online rješavanje potrošačkih sporova</a> (Platforma za ORS).</p>
+
 <h1 id="other_means">Savjetovanje potrošača <a class="hover_a" href="#other_means">#</a> </h1>
 
 <p>Potragu za rješenjem Vašeg problema možete nastaviti i na druge načine.</p>
