add target to external links

--- a/lib/views/help/unhappy.html.erb
+++ b/lib/views/help/unhappy.html.erb
@@ -20,9 +20,9 @@
 
 <ul>
 <li>poslati Vaš prigovor na <strong>drugostupanjsku proceduru</strong> kod <strong>trgovca koji pruža javnu uslugu</strong> te naslovite na ruke Povjerenstva za reklamacije</li>
-<li>pokrenuti <strong>drugostupanjsku proceduru</strong> za on-line rješavanju potrošačkih sporova putem <a href=" http://ec.europa.eu/odr">Platforma za ORS</a></li>
-<li>ako to ne pomogne, kontaktirate jedno <strong>savjetovalište</strong> sa službenog popisa <a href="http://0.codeforcroatia.org/reklamacijeudruge">Savjetovališta potrošača</a> koje organiziraju udruge za zaštitu potrošača te koje djeluju neovisno o interesima trgovaca</li>
-<li>i posljednje, ako ništa od navedenog nije pomoglo u vašem predmetu, pokrenite postupak kod <strong>Ministarstva gospodarstva</strong> putem <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralnog informacijskog sustava za zaštitu potrošača</a> koje može rezultirati inspekcijskim nadzorom trgovca</li>
+<li>pokrenuti <strong>drugostupanjsku proceduru</strong> za on-line rješavanju potrošačkih sporova putem Platforme za ORS</li>
+<li>ako to ne pomogne, kontaktirate jedno <strong>savjetovalište</strong> sa službenog popisa <strong>Savjetovališta potrošača</strong> koje organiziraju udruge za zaštitu potrošača te koje djeluju neovisno o interesima trgovaca</li>
+<li>i posljednje, ako ništa od navedenog nije pomoglo u vašem predmetu, pokrenite postupak kod <strong>Ministarstva gospodarstva</strong> putem <strong>Centralnog informacijskog sustava za zaštitu potrošača</strong> koje može rezultirati inspekcijskim nadzorom trgovca</li>
 </ul>
 
 <h1 id="internal_review">Drugostupanjska žalba <a class="hover_a" href="#internal_review">#</a> </h1>
@@ -57,10 +57,10 @@ U tom slučaju treba poduzeti sljedeće:
 <h2 id="complaining">Nastavljanje postupka kod drugog nadležnog tijela <a class="hover_a" href="#complaining">#</a> </h2>
 
 <p>Ako ste još uvijek nezadovoljni i nakon što je pravna osoba dostavila odgovor možete se žaliti nadležnom tijelu (npr. Ministarstvo Gospodarstva, HAKOM itd). Čak i kada pravna osoba ne odgovori na vašu žalbu koju ste naslovili na Povjerenstvo, možete nastaviti s žalbom nadležnom tijelu. Kako bi to učinili, 
-<a href="https://www.gov.hr/moja-uprava/pravna-drzava-i-sigurnost/prava-potrosaca/prije-i-nakon-kupnje/reklamacija-proizvoda-i-usluga-s-nedostatkom/183">prvo pročitajte upute za traženje inspekcijskog nadzora</a> na središnjem državnom portalu.
+<a href="https://www.gov.hr/moja-uprava/pravna-drzava-i-sigurnost/prava-potrosaca/prije-i-nakon-kupnje/reklamacija-proizvoda-i-usluga-s-nedostatkom/183" target="_blank">prvo pročitajte upute za traženje inspekcijskog nadzora</a> na središnjem državnom portalu.
 </p>
 
-<p>Tek nakon što ste dobili negativan odgovor trgovca na Vaš pisani prigovor, pitanja u vezi svojih prava ili Vašu žalbu upućenu Povjerenstvu za reklamacije kod pravne osobe, putem službene MINGO web aplikacije <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralni informacijski sustav za zaštitu potrošača</a> možete uputiti zahtjev za inspekcijski nadzor:
+<p>Tek nakon što ste dobili negativan odgovor trgovca na Vaš pisani prigovor, pitanja u vezi svojih prava ili Vašu žalbu upućenu Povjerenstvu za reklamacije kod pravne osobe, putem službene MINGO web aplikacije <a href="https://prijava.mingo.hr/CD/prijava.jsp" target="_blank">Centralni informacijski sustav za zaštitu potrošača</a> možete uputiti zahtjev za inspekcijski nadzor:
 
 <ol>
 <li>Kako biste olakšali slanje relevantne informacije inspektorima, priložite i
@@ -73,18 +73,18 @@ U tom slučaju treba poduzeti sljedeće:
 ili ispišite cijelu stranicu s prigovorom i sve priloge.
 </li>
 
-<li>Nakon ispunjavanja i slanja obrasca putem službene web aplikacije, <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralni informacijski sustav za zaštitu potrošača</a> će vaš predmet automatski proslijediti Ministarstvu gospodarstva, Savjetovalištu za zaštitu potrošača ili Tržišnoj inspekciji Ministarstva gospodarstva, a vama poslati PIN uz pomoć kojega možete pratiti stanje podnesenog predmeta.</li>
+<li>Nakon ispunjavanja i slanja obrasca putem službene web aplikacije, <a href="https://prijava.mingo.hr/CD/prijava.jsp" target="_blank">Centralni informacijski sustav za zaštitu potrošača</a> će vaš predmet automatski proslijediti Ministarstvu gospodarstva, Savjetovalištu za zaštitu potrošača ili Tržišnoj inspekciji Ministarstva gospodarstva, a vama poslati PIN uz pomoć kojega možete pratiti stanje podnesenog predmeta.</li>
 </ol>
 
 <p><i><%= site_name %></i> nema posebnih sredstava za rukovanje s prigovorima u ovoj fazi — prigovori se nalaze u sustavu nadležnog tijela. Međutim, možete ostavljati komentare ispod Vašeg prigovora na <i><%= site_name %></i> o statusu rješavanja zahtjeva za inspekcijskim nadzorom kako bi informirali ostale o napretku procesa.</p>
 
 <h2 id="complaining">On-line rješavanje potrošačkih sporova <a class="hover_a" href="#online">#</a> </h2>
 
-<p>Odredbom Europske komisije br. 524/2013 o on-line rješavanju potrošačkih sporova koja se primjenjuje od 09.01.2016 godine, u pogon je stavljena <a href="http://ec.europa.eu/odr">Platforma za online rješavanje potrošačkih sporova</a> (Platforma za ORS).</p>
+<p>Odredbom Europske komisije br. 524/2013 o on-line rješavanju potrošačkih sporova koja se primjenjuje od 09.01.2016 godine, u pogon je stavljena <a href="http://ec.europa.eu/odr" target="_blank">Platforma za online rješavanje potrošačkih sporova</a> (Platforma za ORS).</p>
 
 <h1 id="other_means">Savjetovanje potrošača <a class="hover_a" href="#other_means">#</a> </h1>
 
 <p>Potragu za rješenjem Vašeg problema možete nastaviti i na druge načine.</p>
 
-<p>Ako ste još uvijek nezadovoljni odgovorom ili uopće niste dobili odogovor, kontaktirate jedno <strong>savjetovalište</strong> sa službenog popisa <a href="http://0.codeforcroatia.org/reklamacijeudruge">Savjetovališta potrošača</a> koje organiziraju udruge za zaštitu potrošača te koje djeluju neovisno o interesima trgovaca a koje podupire Ministarstvo gospodarstva, poduzetništva i obrta te tijela jedinica lokalne i područne (regionalne) samouprave koja su dužna sustavno promicati zaštitu potrošača na svom području.
+<p>Ako ste još uvijek nezadovoljni odgovorom ili uopće niste dobili odogovor, kontaktirate jedno <strong>savjetovalište</strong> sa službenog popisa <a href="http://0.codeforcroatia.org/reklamacijeudruge" target="_blank">Savjetovališta potrošača</a> koje organiziraju udruge za zaštitu potrošača te koje djeluju neovisno o interesima trgovaca a koje podupire Ministarstvo gospodarstva, poduzetništva i obrta te tijela jedinica lokalne i područne (regionalne) samouprave koja su dužna sustavno promicati zaštitu potrošača na svom području.
 </p>
