--- a/lib/views/help/unhappy.html.erb
+++ b/lib/views/help/unhappy.html.erb
@@ -57,10 +57,10 @@ U tom slučaju treba poduzeti sljedeće:
 <h2 id="complaining">Nastavljanje postupka kod drugog nadležnog tijela <a class="hover_a" href="#complaining">#</a> </h2>
 
 <p>Ako ste još uvijek nezadovoljni i nakon što je pravna osoba dostavila odgovor možete se žaliti nadležnom tijelu (npr. Ministarstvo Gospodarstva, HAKOM itd). Čak i kada pravna osoba ne odgovori na vašu žalbu koju ste naslovili na Povjerenstvo, možete nastaviti s žalbom nadležnom tijelu. Kako bi to učinili, 
-<a href="https://www.gov.hr/moja-uprava/pravna-drzava-i-sigurnost/prava-potrosaca/prije-i-nakon-kupnje/reklamacija-proizvoda-i-usluga-s-nedostatkom/183" target="_blank">prvo pročitajte upute za traženje inspekcijskog nadzora</a> na središnjem državnom portalu.
+<a href="http://0.codeforcroatia.org/reklamacijagov" target="_blank">prvo pročitajte upute za traženje inspekcijskog nadzora</a> na središnjem državnom portalu.
 </p>
 
-<p>Tek nakon što ste dobili negativan odgovor trgovca na Vaš pisani prigovor, pitanja u vezi svojih prava ili Vašu žalbu upućenu Povjerenstvu za reklamacije kod pravne osobe, putem službene MINGO web aplikacije <a href="https://prijava.mingo.hr/CD/prijava.jsp" target="_blank">Centralni informacijski sustav za zaštitu potrošača</a> možete uputiti zahtjev za inspekcijski nadzor:
+<p>Tek nakon što ste dobili negativan odgovor trgovca na Vaš pisani prigovor, pitanja u vezi svojih prava ili Vašu žalbu upućenu Povjerenstvu za reklamacije kod pravne osobe, putem službene MINGO web aplikacije <a href="http://0.codeforcroatia.org/mingoprijava" target="_blank">Centralni informacijski sustav za zaštitu potrošača</a> možete uputiti zahtjev za inspekcijski nadzor:
 
 <ol>
 <li>Kako biste olakšali slanje relevantne informacije inspektorima, priložite i
@@ -73,7 +73,7 @@ U tom slučaju treba poduzeti sljedeće:
 ili ispišite cijelu stranicu s prigovorom i sve priloge.
 </li>
 
-<li>Nakon ispunjavanja i slanja obrasca putem službene web aplikacije, <a href="https://prijava.mingo.hr/CD/prijava.jsp" target="_blank">Centralni informacijski sustav za zaštitu potrošača</a> će vaš predmet automatski proslijediti Ministarstvu gospodarstva, Savjetovalištu za zaštitu potrošača ili Tržišnoj inspekciji Ministarstva gospodarstva, a vama poslati PIN uz pomoć kojega možete pratiti stanje podnesenog predmeta.</li>
+<li>Nakon ispunjavanja i slanja obrasca putem službene web aplikacije, <a href="http://0.codeforcroatia.org/mingoprijava" target="_blank">Centralni informacijski sustav za zaštitu potrošača</a> će vaš predmet automatski proslijediti Ministarstvu gospodarstva, Savjetovalištu za zaštitu potrošača ili Tržišnoj inspekciji Ministarstva gospodarstva, a vama poslati PIN uz pomoć kojega možete pratiti stanje podnesenog predmeta.</li>
 </ol>
 
 <p><i><%= site_name %></i> nema posebnih sredstava za rukovanje s prigovorima u ovoj fazi — prigovori se nalaze u sustavu nadležnog tijela. Međutim, možete ostavljati komentare ispod Vašeg prigovora na <i><%= site_name %></i> o statusu rješavanja zahtjeva za inspekcijskim nadzorom kako bi informirali ostale o napretku procesa.</p>
