--- a/lib/views/outgoing_mailer/initial_request.text.erb
+++ b/lib/views/outgoing_mailer/initial_request.text.erb
@@ -7,13 +7,14 @@
 <%= _('Pisani odgovor dostavite na adresu e-pošte: {{reply_email}}', 
       :reply_email => @info_request.incoming_email) %>
 
-<%= _('Ovo je pisani prigovor potrošača dostavljen putem {{site_name}} internetske stranice.', :site_name => site_name) %>
+<%= _('Ovo je pisani prigovor potrošača dostavljen putem {{site_name}} internetske stranice. Sve se objavljuje javno.', 
+      :site_name => site_name) %>
 
 <%= _('Je li {{email_address}} pogrešna adresa za podnošenje prigovora za {{public_body_name}}? Dojavite promjenu adrese putem sljedećeg linka: ', 
        :email_address => @info_request.public_body.request_email, 
        :type_of_request =>  @info_request.law_used_human(:full), 
        :public_body_name => @info_request.public_body.name)%> 
-       <%= new_change_request_url(:body => @info_request.public_body.url_name) %>
+<%= new_change_request_url(:body => @info_request.public_body.url_name) %>
 
 <%= render :partial => 'followup_footer' %>
 
