--- a/lib/views/general/_before_head_end.html.erb
+++ b/lib/views/general/_before_head_end.html.erb
@@ -1,1 +1,9 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<!-- Floating buttons START -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link href='http://fonts.googleapis.com/css?family=Raleway:100,200,300,400' rel='stylesheet' type='text/css'>
+<script src="/assets/javascripts/floating_button/modernizr.touch.js"></script>
+<link href="/assets/stylesheets/floating_button/index.css" rel="stylesheet">
+<link href="/assets/stylesheets/floating_button/mfb.css" rel="stylesheet">
+<!-- Floating buttons END -->
