--- a/lib/views/general/_before_head_end.html.erb
+++ b/lib/views/general/_before_head_end.html.erb
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 <link href='http://fonts.googleapis.com/css?family=Raleway:100,200,300,400' rel='stylesheet' type='text/css'>
-<script src="/assets/javascripts/floating_button/modernizr.touch.js"></script>
-<link href="/assets/stylesheets/floating_button/index.css" rel="stylesheet">
-<link href="/assets/stylesheets/floating_button/mfb.css" rel="stylesheet">
+<% content_for :javascript do %>
+ <%= javascript_include_tag 'vendor/modernizr.touch.js' %>
+<% end %>
 <!-- Floating buttons END -->
